fix limiting recommendations logic